[package]
name = "haras-suren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
url = "2.3.1"
bookbinder_common = "0.1.1"
usvg = "0.29.0"
image = "0.24.5"
resvg = "0.29.0"
